// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cascader > legacy props > should support showCheckedStrategy child 1`] = `
<div
  class="ant-select ant-cascader ant-select-outlined ant-select-css-var ant-cascader-css-var css-var-root ant-select-focused ant-select-multiple ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-content"
  >
    <div
      class="ant-select-content-item ant-select-content-item-prefix"
      style="opacity: 1;"
    >
      <div
        class="ant-select-placeholder"
        style="visibility: visible;"
      />
    </div>
    <div
      class="ant-select-content-item ant-select-content-item-suffix"
      style="opacity: 1;"
    >
      <input
        aria-autocomplete="list"
        aria-controls="test-id_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="test-id_list"
        autocomplete="off"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        style="--select-input-width: 0;"
        type="search"
        value=""
      />
    </div>
  </div>
  <div
    class="ant-select-suffix"
  >
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader > legacy props > should support showCheckedStrategy parent 1`] = `
<div
  class="ant-select ant-cascader ant-select-outlined ant-select-css-var ant-cascader-css-var css-var-root ant-select-focused ant-select-multiple ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-content"
  >
    <div
      class="ant-select-content-item ant-select-content-item-prefix"
      style="opacity: 1;"
    >
      <div
        class="ant-select-placeholder"
        style="visibility: visible;"
      />
    </div>
    <div
      class="ant-select-content-item ant-select-content-item-suffix"
      style="opacity: 1;"
    >
      <input
        aria-autocomplete="list"
        aria-controls="test-id_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="test-id_list"
        autocomplete="off"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        style="--select-input-width: 0;"
        type="search"
        value=""
      />
    </div>
  </div>
  <div
    class="ant-select-suffix"
  >
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader > popup correctly with defaultValue 1`] = `null`;

exports[`Cascader > popup correctly with defaultValue RTL 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl ant-select-outlined ant-select-css-var ant-cascader-css-var css-var-root ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-content ant-select-content-has-value"
    title="Zhejiang / Hangzhou"
  >
    Zhejiang / Hangzhou
    <input
      aria-autocomplete="list"
      aria-controls="test-id_list"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="test-id_list"
      autocomplete="off"
      class="ant-select-input"
      id="test-id"
      readonly=""
      role="combobox"
      type="search"
      value=""
    />
  </div>
  <div
    class="ant-select-suffix"
  >
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </div>
  <div
    class="ant-select-clear"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        fill-rule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl ant-select-outlined ant-select-css-var ant-cascader-css-var css-var-root ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-content"
  >
    <div
      class="ant-select-placeholder"
      style="visibility: visible;"
    />
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="ant-select-input"
      id="test-id"
      readonly=""
      role="combobox"
      type="search"
      value=""
    />
  </div>
  <div
    class="ant-select-suffix"
  >
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader > should highlight keyword and filter when search in Cascader 1`] = `undefined`;

exports[`Cascader > should highlight keyword and filter when search in Cascader with same field name of label and value 1`] = `undefined`;

exports[`Cascader > should render not found content 1`] = `null`;

exports[`Cascader > should show not found content when options.length is 0 1`] = `null`;

exports[`Cascader > support controlled mode 1`] = `
<div
  class="ant-select ant-cascader ant-select-outlined ant-select-css-var ant-cascader-css-var css-var-root ant-select-single ant-select-allow-clear ant-select-show-arrow"
>
  <div
    class="ant-select-content ant-select-content-has-value"
    title="Zhejiang / Hangzhou / West Lake"
  >
    Zhejiang / Hangzhou / West Lake
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="ant-select-input"
      id="test-id"
      readonly=""
      role="combobox"
      type="search"
      value=""
    />
  </div>
  <div
    class="ant-select-suffix"
  >
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </div>
  <div
    class="ant-select-clear"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        fill-rule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
        />
      </svg>
    </span>
  </div>
</div>
`;
